docs: batch update ai-agent, frontend, java tech stacks (updates #1-#6)\n\n- ai-agent: A2A v1.0, MCP Streamable HTTP, Claude 4.6, Mem0 v2.0,\n  Letta v0.16.7, Zep context engineering, Composio 50K+ tools,\n  Firecrawl v2.9.0, E2B Build System 2.0, claude-sonnet model ID fixes\n- frontend: React 19 hooks, React Router v7, Vue 3.6 Vapor Mode,\n  Nuxt 4, Vite 8/Vite+, Tailwind CSS v4, TypeScript 5.9/7.0, Node 24\n- java: Java 18-24 (Virtual Threads, Stream Gatherers), Spring Boot 4.0,\n  Spring Cloud 2025.1, Kafka 4.x KRaft, Gradle 9 Kotlin DSL"